--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "grunt-concurrent": "~0.4.0",
     "load-grunt-tasks": "~0.2.0",
     "time-grunt": "~0.2.0",
-    "jshint-stylish": "~0.1.3"
+    "jshint-stylish": "~0.1.3",
+    "grunt-contrib-sass": "~0.7.3"
   },
   "engines": {
     "node": ">=0.8.0"
