--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "modernizr": "~2.6.2",
     "jquery": "~1.11.0",
     "bourbon": "~3.1.8",
-    "neat": "~1.6.0"
+    "neat": "~1.6.0",
+    "bitters": "~0.9.3"
   },
   "devDependencies": {}
 }
