--- a/bower.json
+++ b/bower.json
@@ -2,11 +2,11 @@
   "name": "lookthinkcode",
   "private": true,
   "dependencies": {
-    "modernizr": "~2.6.2",
-    "jquery": "~1.11.0",
-    "bourbon": "~3.1.8",
-    "neat": "~1.6.0",
-    "bitters": "~0.9.3"
+    "modernizr": "latest",
+    "jquery": "latest",
+    "bourbon": "latest",
+    "neat": "latest",
+    "bitters": "latest"
   },
   "devDependencies": {}
 }
