--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "fastshell",
-  "title": "Fiercely quick and opinionated front-ends",
-  "author": "Hossein Karami",
-  "url": "https://HosseinKarami.github.io/fastshell",
+  "name": "lookthinkcode",
+  "title": "Gulp, Sass, Bourbon and Neat Starter",
+  "author": "lookthinkmake",
+  "url": "https://github.com/lookthinkmake/Lookthinkcode",
   "version": "1.0.0",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "http://github.com/HosseinKarami/fastshell.git"
+    "url": "https://github.com/lookthinkmake/Lookthinkcode.git"
   },
   "devDependencies": {
     "browser-sync": "^1.3.0",
